# projeto_barchart

./: .gitignore  README.md
source/: CMakeLists.txt
source/core/: barchart.cpp  barchart.h  bcr_am.cpp  bcr_am.h  main.cpp
source/libs/: coms.cpp  coms.h  text_color.h
